tests/tests/snapshots/csv_newlines.snap
---
source: tests/output_format_snapshots.rs
expression: result
---
id,text,data
1,normal,value
2,"text,with,commas","value""with""quotes"
3,"text
with
newlines",text	with	tabs
