tests/tests/snapshots/csv_null_values.snap
---
source: tests/output_format_snapshots.rs
expression: result
---
id,name,value
1,Alice,100
2,,200
3,Charlie,
