tests/tests/snapshots/json_null_handling.snap
---
source: tests/output_format_snapshots.rs
expression: result
---
{"data":[{"id":1,"name":"Alice","value":100},{"id":2,"name":"","value":200},{"id":3,"name":"Charlie","value":""}]}
