tests/tests/snapshots/json_standard_data.snap
---
source: tests/output_format_snapshots.rs
expression: result
---
{"data":[{"id":1,"name":"Alice","value":100},{"id":2,"name":"Bob","value":200},{"id":3,"name":"Charlie","value":300}]}
