tests/tests/snapshots/tsv_null_conversion.snap
---
source: tests/output_format_snapshots.rs
expression: result
---
id	name	value
1	Alice	100
2		200
3	Charlie
