tests/tests/snapshots/tsv_standard_data.snap
---
source: tests/output_format_snapshots.rs
expression: result
---
id	name	value
1	Alice	100
2	Bob	200
3	Charlie	300
