tests/tests/snapshots/value_to_json_invalid_date_error.snap
---
source: tests/type_transformer_snapshots.rs
expression: error_msg
---
Type conversion error: Invalid month value 13 in date
