tests/tests/snapshots/value_to_json_invalid_date_fallback.snap
---
source: tests/type_transformer_snapshots.rs
expression: serialized
---
"Type conversion error: Invalid month value 13 in date"
